log
Tue Mar 24 09:45:02 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
351fb46
Tue Mar 24 09:53:53 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
465a556
Tue Mar 24 10:02:04 PM UTC 2026: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
d1e1828
Tue Mar 24 10:03:35 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
0739e93
Tue Mar 24 10:06:36 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 20/60
944171d
Tue Mar 24 10:10:50 PM UTC 2026: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:69:17: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   69 |     return aux->dato;
      |                 ^~~~
      |                 data
list.c: In function ‘prevList’:
list.c:77:17: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   77 |     return aux->dato;
      |                 ^~~~
      |                 data
list.c: In function ‘lastList’:
list.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
   70 | }
      | ^
list.c: In function ‘prevList’:
list.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
a4c6b26
Tue Mar 24 10:11:18 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:58:17: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   58 |     return aux->dato;
      |                 ^~~~
      |                 data
list.c: In function ‘lastList’:
list.c:69:17: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   69 |     return aux->dato;
      |                 ^~~~
      |                 data
list.c: In function ‘prevList’:
list.c:77:17: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   77 |     return aux->dato;
      |                 ^~~~
      |                 data
list.c: In function ‘nextList’:
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
list.c: In function ‘lastList’:
list.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
   70 | }
      | ^
list.c: In function ‘prevList’:
list.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
2892e10
Tue Mar 24 10:11:37 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 30/60
b26cde6
Tue Mar 24 10:20:59 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
a96674c
Tue Mar 24 10:23:15 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 30/60
cb9640c
Tue Mar 24 10:24:21 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:85:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   85 |     if(list->head == NULL) list->head = nuevoNodo; list->tail = nuevoNodo;
      |     ^~
list.c:85:52: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   85 |     if(list->head == NULL) list->head = nuevoNodo; list->tail = nuevoNodo;
      |                                                    ^~~~
list.c:86:5: error: ‘else’ without a previous ‘if’
   86 |     else{
      |     ^~~~
cc1: all warnings being treated as errors
cdc82c5
Tue Mar 24 10:24:44 PM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
9a0d9f7
Tue Mar 24 10:31:50 PM UTC 2026: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
598d849
Tue Mar 24 10:37:08 PM UTC 2026: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 40/60
3412e63
Tue Mar 24 10:38:36 PM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
b46bd55
Tue Mar 24 10:47:44 PM UTC 2026: 
 tests:  10|2
total_score: 40/60
53af686
Tue Mar 24 10:48:39 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
c7449df
Tue Mar 24 10:55:03 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
4407ec6
Thu Mar 26 10:01:23 PM UTC 2026: 
 tests:  10|2
total_score: 40/60
2ade496
